# insurance-experience

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo_experience_rating.py  run_tests2.py  run_tests3.py
src/insurance_experience/: __init__.py  _types.py  attention.py  calibration.py  dynamic.py  static.py  surrogate.py  utils.py
tests/: test_attention.py  test_calibration.py  test_dynamic.py  test_integration.py  test_static.py  test_surrogate.py  test_types.py  test_utils.py
