[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-experience"
version = "0.1.0"
description = "Individual policy-level Bayesian posterior experience rating for insurance pricing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "insurance",
    "actuarial",
    "experience-rating",
    "credibility",
    "bayesian",
    "pricing",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=0.20",
]

[project.optional-dependencies]
deep = ["torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=0.20",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-experience"
Documentation = "https://burning-cost.github.io/insurance-experience"
Repository = "https://github.com/burning-cost/insurance-experience"
Issues = "https://github.com/burning-cost/insurance-experience/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_experience"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
